# econometrics_homework

./: backtest_results.csv  data.csv  main.py  original_text.md  processed_data.csv  pyproject.toml  real_market_backtest.csv  run_logit.py  run_xgboost.py
pyplot_chart/: chart3-1.py  chart4-1.py
